# glxblt

./: LICENSE  README.md  installation.md
glfw-test/: CMakeLists.txt  Readme.md  build.sh  frag.glsl  main.cpp  matutils.cpp  matutils.hpp  shader.hpp  vert.glsl
glfw-test/ext/glad/: glad.c  glad.h
glut-test/: build.sh
